# genai-ml-platform-examples

./: .gitignore  SCPortfolioRoles.yaml
demo-apps/mediflow/: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
demo-apps/mediflow/backend/: config.py  main.py  review_seed.py  scheduler.py
demo-apps/mediflow/backend/agent/: agent.py  batch_resolver.py  prompts.py  skill_executor.py  tool_logging_hook.py
demo-apps/mediflow/backend/analysis/: automation_generator.py  context_extractor.py  orchestrator.py  pattern_detector.py
demo-apps/mediflow/backend/api/: activity_routes.py  analysis_routes.py  chat_routes.py  dashboard_routes.py  data_routes.py  memory_routes.py  metrics_routes.py  session_routes.py  skill_routes.py
demo-apps/mediflow/backend/seed/: seed_data.py
demo-apps/mediflow/backend/seed/fixtures/: appointments.json  communications.json  doctors.json  insights.json  invoices.json  pathology_results.json  patient_memories.json  patients.json  practice_info.json  ui_activities.json
demo-apps/mediflow/backend/seed/fixtures/conversations/: day1_absence.json  day1_afternoon.json  day1_chronic.json  day1_morning.json  day1_pediatric.json  day2_early.json
demo-apps/mediflow/backend/services/: activity_service.py  audit_service.py  billing_service.py  calendar_service.py  cloudwatch.py  comms_service.py  database.py  execution_history.py  memory_service.py  patient_service.py  pricing.py
demo-apps/mediflow/backend/tools/: billing_tools.py  briefing_tools.py  calendar_tools.py  comms_tools.py  patient_tools.py  practice_tools.py  skill_tools.py  ui_tools.py
demo-apps/mediflow/frontend/: index.html  package-lock.json  package.json  vite.config.js
demo-apps/mediflow/frontend/src/: App.jsx  index.css
demo-apps/mediflow/frontend/src/api/: client.js
demo-apps/mediflow/frontend/src/components/: ViewTransition.jsx
demo-apps/mediflow/frontend/src/components/charts/: DonutChart.jsx  LineChart.jsx
demo-apps/mediflow/frontend/src/components/chat/: ActionConfirmation.jsx  AvailabilityGrid.jsx  ImpactCard.jsx  InsightMessage.jsx  InvoiceCard.jsx  PatientCard.jsx  PatternCard.jsx  RescheduleCascadeCard.jsx  SkillApprovalCard.jsx
demo-apps/mediflow/frontend/src/components/layout/: ActivityBar.jsx  AgentPanel.jsx  AgentToggle.jsx  AppHeader.jsx  ResizeHandle.jsx  Sidebar.jsx
demo-apps/mediflow/frontend/src/components/views/: CalendarView.jsx  CommsView.jsx  (+5 more)
demo-apps/mediflow/frontend/src/context/: AppContext.jsx
demo-apps/mediflow/frontend/src/hooks/: useActivityTracker.js
demo-apps/mediflow/scripts/: build-frontend.sh  reset.sh  setup.sh
demo-apps/mediflow/tests/: conftest.py  test_analysis_pipeline.py  test_doctor_availability.py  test_pattern_detector.py  test_seed_communications.py  test_services.py  test_today_dashboard.py  test_tools.py  test_ui_action_patient_id.py  test_unified_pipeline.py  test_unified_skill_routes.py  test_unified_skills_migration.py
platform/mlp-sdk-v3/: .gitignore  BLOG_ML_PLATFORM_SDK.md  BLOG_SUMMARY.md  CHECKLIST.md  DECK_README.md  MANIFEST.in  PRESENTATIONS_COMPARISON.md  PRESENTATION_FILES.md  PRESENTATION_README.md  PRESENTATION_SUMMARY.md  PYPI_PUBLISHING_GUIDE.md  QUICK_START_PYPI.md  README.md  UPDATED_DECK_SUMMARY.md  analyze_and_create_deck.py  create_mlp_deck_final.py  create_mlp_sdk_deck.py  generate_mlp_sdk_presentation.py  publish_to_pypi.sh  pyproject.toml
platform/mlp-sdk-v3/.kiro/specs/mlp-sagemaker-sdk/: design.md  requirements.md  tasks.md
platform/mlp-sdk-v3/docs/: API_GUIDE.md  CONFIGURATION_GUIDE.md  ENCRYPTION_GUIDE.md  SDK_V3_PARAMETER_GUIDE.md  USAGE_EXAMPLES.md
platform/mlp-sdk-v3/examples/: QUICKSTART.md  README.md  TRAINING_EXAMPLES.md  admin-config-xacct.yaml  admin-config.yaml  basic_usage.py  generate_admin_config.py  requirements.txt  sagemaker_operations.py  xgboost_training_example.ipynb  xgboost_training_example_xaccount.ipynb  xgboost_training_script.py  xgboost_training_script_xacct.py
platform/mlp-sdk-v3/examples/data/: train.csv  validation.csv
platform/mlp-sdk-v3/mlp_sdk/: __init__.py  config.py  exceptions.py  models.py  session.py
platform/mlp-sdk-v3/mlp_sdk.egg-info/: PKG-INFO  SOURCES.txt
platform/mlp-sdk-v3/mlp_sdk/wrappers/: __init__.py  deployment.py  feature_store.py  pipeline.py  processing.py  training.py
platform/mlp-sdk-v3/sagemaker_mlp_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
platform/mlp-sdk-v3/tests/: conftest.py
platform/mlp-sdk-v3/tests/unit/: test_encryption.py  test_feature_store.py  test_package_structure.py  test_processing.py  test_session.py  test_training.py
(+290 files in other folders)
