[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sagemaker-mlp-sdk"
version = "0.1.0"
description = "A Python wrapper library for SageMaker SDK v3 with configuration-driven defaults"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ram Vittal", email = "rvvittal@amazon.com"}
]
keywords = ["sagemaker", "aws", "machine-learning", "ml", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "sagemaker>=3.0.0",  # SageMaker SDK v3
    "boto3>=1.26.0",
    "botocore>=1.29.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "cryptography>=41.0.0",  # For AES-256-GCM encryption
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-hypothesis>=6.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "moto[sagemaker]>=4.2.0",
    "boto3-stubs[sagemaker]>=1.26.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-hypothesis>=6.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "moto[sagemaker]>=4.2.0",
]

[project.urls]
Homepage = "https://github.com/aws-samples/genai-ml-platform-examples/tree/main/platform/mlp-sdk-v3"
Documentation = "https://github.com/aws-samples/genai-ml-platform-examples/blob/main/platform/mlp-sdk-v3/docs/"
Repository = "https://github.com/aws-samples/genai-ml-platform-examples/tree/main/platform/mlp-sdk-v3"
"Bug Tracker" = "https://github.com/aws-samples/genai-ml-platform-examples/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mlp_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=mlp_sdk",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "property: Property-based tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["mlp_sdk"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["mlp_sdk"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sagemaker.*",
    "boto3.*",
    "botocore.*",
    "moto.*",
]
ignore_missing_imports = true